--- a/src/css/login.css
+++ b/src/css/login.css
@@ -4,5 +4,40 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: aquamarine;
+    /* background-color: rgb(247, 247, 247); */
+    background-image: url('../../public/img/bg1.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+#background-blur {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /* background-color: rgba(110, 181, 240, 0.678); */
+    background-image: linear-gradient(to right, rgba(156, 100, 189, 0.897), rgb(225, 189, 250));
+}
+
+.login-image {
+    width: 150px;
+    height: 150px;
+    background-color: blueviolet;
+}
+
+.formulaire {
+    background-color: transparent;
+    width: 40%;
+    height: 40%;
+}
+
+.formulaire-header {
+    background-color: transparent;
+}
+
+.formulaire-body {
+    background-color: white;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.171) ;
 }
